Closed Bug 83352 Opened 25 years ago Closed 25 years ago

Entering incorrect password for proxy authentication causes endless loop

Categories

(Core :: Networking: HTTP, defect)

x86
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla0.9.1

People

(Reporter: bbaetz, Assigned: darin.moz)

Details

(Keywords: hang, Whiteboard: r=bbaetz, sr=dougt, a=chofmann)

Attachments

(1 file)

Set your proxy settings to tegu.mozilla.org:3130 (56K bandwidth limiting proxy). If you log in with an incorrect username/password prompt, then no matter what you enter at the next prompt, the browser goes into an endless GET/407 loop with the proxy server. From a network trace, we appear to be appending to the proxy-authentication header, so that we send: Proxy-Authorization: Basic Foo then, the next packet Proxy-Authorization: Basic Foo, Basic Foo then Proxy-Authorization: Basic Foo, Basic Foo, Basic Foo and so on. By the time we get to the 1000'th odd exchange we take about 10 packets just to send the headers. Checked on 8am mozilla bits.
Keywords: nsbeta1
bbaetz: can you test and r= this patch? thx!
Status: NEW → ASSIGNED
Keywords: mozilla0.9.1
rs=dougt
Keywords: hang
Whiteboard: r=bbaetz, sr=dougt, a=?
r=bbaetz
Whiteboard: r=bbaetz, sr=dougt, a=? → r=bbaetz, sr=dougt, a=chofmann
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla0.9.1
fix checked in
VERIFIED on branch 2001060713 linux build. Leaving as resolved until the other platforms are checked.
VERIFIED: 99% sure I hit this while doing nsbeta1 functionals.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: