Fixes bug 83352 "Entering incorrect password for proxy authentication causes endless loop" r=bbaetz, rs=dougt, a=chofmann